cloudSevice.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud
spec:
  selector:
    app: cloud
  ports:
    - port: 6302
      targetPort: 6302
      nodePort: 26302
  type: NodePort
  externalIPs:
    - 192.168.3.10
