endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.3.117
    ports:
      - port: 3306
        protocol: TCP
